--- a/index.html
+++ b/index.html
@@ -5,14 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>숫자 맞추기 게임</h1>
-    <div id="result-area">결과 값 확인하기</div>
-    <div id="chance-area">남은 기회 : </div>
-    <input type="number" id="user-input"/>
-    <button id="play-button">Go!</button>
-    <button id="reset-button">Reset!</button>
-    <script src="main.js"></script>
+    <div class="container">
+        <div>
+            <h1 style="font-weight: 600; margin-top: 10px; color: grey;">Guess My Number</h1>
+            <div id="result-area" style="font-weight: 600;">결과 값 확인하기</div>
+            <div id="chance-area" style="font-weight: 600;">남은 기회</div>
+            <img class="gif-area"/>
+            <div class="row d-flex justify-content-center">
+                <div class="col-md-8 col-sm-12" style="margin-top: 10px;">
+                    <input type="number" id="user-input" class="input-form" placeholder="1부터 100까지 숫자를 입력해주세요"/>
+                </div>               
+                <div class="col-md-4 col-sm-12">
+                    <button id="play-button" class="button-style" style="background-color: blue;">Go!</button>
+                </div>
+                <div class="col-md-8 col-sm-12">
+                    <button id="reset-button" class="button-style" style="background-color: red;">Reset!</button>
+                </div>               
+                <div class="col-md-4 col-sm-12">
+                    <button id="hint-button" class="button-style" style="background-color: yellow;">Hint!</button>
+                </div>                   
+            </div>
+
+            <script src="main.js"></script>
+        </div>
+    </div>
 </body>
 </html>
