--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     <div class="container">
         <div>
             <h1 style="font-weight: 600; margin-top: 10px; color: grey;">Guess My Number</h1>
-            <div id="result-area" style="font-weight: 600;">결과 값 확인하기</div>
-            <div id="chance-area" style="font-weight: 600;">남은 기회</div>
+            <div id="result-area" style="font-weight: 600; font-size: larger;">결과 값 확인하기</div>
+            <div id="chance-area" font-family="georgia" style="font-weight: 600; font-size: larger;">남은 기회</div>
             <img class="gif-area"/>
             <div class="row d-flex justify-content-center">
-                <div class="col-md-8 col-sm-12" style="margin-top: 10px;">
+                <div class="col-md-6 col-sm-12" style="margin-top: 20px;">
                     <input type="number" id="user-input" class="input-form" placeholder="1부터 100까지 숫자를 입력해주세요"/>
                 </div>               
-                <div class="col-md-4 col-sm-12">
+                <div class="col-md-2 col-sm-12">
                     <button id="play-button" class="button-style" style="background-color: blue;">Go!</button>
                 </div>
-                <div class="col-md-8 col-sm-12">
+                <div class="col-md-2 col-sm-12">
                     <button id="reset-button" class="button-style" style="background-color: red;">Reset!</button>
                 </div>               
-                <div class="col-md-4 col-sm-12">
+                <div class="col-md-2 col-sm-12">
                     <button id="hint-button" class="button-style" style="background-color: yellow;">Hint!</button>
                 </div>                   
             </div>
